--- a/src/main/webapp/GestaoEmpresas.xhtml
+++ b/src/main/webapp/GestaoEmpresas.xhtml
@@ -54,7 +54,10 @@
 				<p:spacer width="9px"/>
 				
 				<p:commandButton title="Excluir" icon="pi pi-trash"
-					disabled="#{not gestaoEmpresasBean.empresaSelecionada}"/>
+					disabled="#{not gestaoEmpresasBean.empresaSelecionada}"
+					actionListener="#{gestaoEmpresasBean.excluir}"
+					update="message empresasDataTable toolbar"
+					process="@this"/>
 				
 				<p:spacer width="9px"/>
 				<i class="pi pi-bars px-2"/>
